# PDFMarQ

./: changes.md  example.py  md-guide.md  pyproject.toml  readme.md
.github/workflows/: publish.yml
pdfmarq/: __init__.py  _warn.py  constants.py  core.py  fonts.py  graphics.py  inline.py  layout.py  readme.md  review.md  structure.py  styles.py  tables.py  text.py  utils.py
pdfmarq/md/: __init__.py  highlight.py  markdown.py  markdown_style.py  math.py  md_blockquote.py  md_blocks.py  md_estimate.py  md_fonts.py  md_footnotes.py  md_frontmatter.py  md_html.py  md_images.py  md_inline.py  md_list.py  md_plugins.py  md_preprocess.py  md_table.py  mermaid.py  openmoji.py  presets.py  readme.md  render.py
pdfmarq/tests/: conftest.py  test_cross_lib.py  test_directives.py  test_image_dsl.py  test_md_smoke.py  test_render_block.py  test_smoke.py  test_units.py
