[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfmarq"
version = "0.1.0"
description = "PDF generation library with fluent API and optional markdown support"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Xaeian"}]
keywords = ["pdf", "reportlab", "document", "generation", "markdown"]
dependencies = ["reportlab", "Pillow", "svglib"]

[project.optional-dependencies]
md = ["PyYAML", "Pygments", "emoji", "markdown-it-py", "matplotlib", "mdit-py-emoji", "mdit-py-plugins"]
all = ["PyYAML", "Pygments", "emoji", "markdown-it-py", "matplotlib", "mdit-py-emoji", "mdit-py-plugins"]

[project.urls]
Repository = "https://github.com/Xaeian/PDFMarQ"

[tool.setuptools.packages.find]
include = ["pdfmarq*"]
